# codexa

./: .gitignore  CHANGES.md  CLAUDE.md  CODEXA.md  DEVELOPMENT_STATUS.md  PHASE_3_COMPLETION_SUMMARY.md  README.md  SETUP_GUIDE.md  TEST_VALIDATION_FIXES.py  VALIDATION_MIGRATION_GUIDE.md  claude_code_final_test.py  codexa.txt  codexa_agentic_demo.py  codexa_gui.py  comprehensive_mcp_actions.py  comprehensive_mcp_demo.py  debug_mcp_tools.py  demo_search.py  demo_shared_event_loop.py  final_agentic_demo.py  gui_launcher.py  pyproject.toml  requirements.txt  test_agentic_loop.py  test_claude_code_direct.py  test_claude_code_integration.py  test_e2e_workflows.py  test_enhanced_agents.py  test_fixes_demo.py  test_full_integration.py  test_llm_integration.py  test_mcp_fix.py  test_mcp_fixes.py  test_model_discovery.py  test_real_mcp_integration.py  test_serena_integration.py  test_shared_event_loop.py  test_specific_fixes.py  test_system_prompt.py  test_tools.py  (+1 more)
.codexa/: task_progress.json
.serena/: project.yml
codexa/: __init__.py  agentic_loop.py  autonomous_agent.py  cli.py  codegen.py  config.py  core.py  enhanced_cli.py  enhanced_config.py  enhanced_core.py  enhanced_providers.py  execution.py  mcp_service.py  planning.py  providers.py  session_memory.py  shared_event_loop_agent.py  system_prompt.py
codexa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: SEARCH_CAPABILITIES.md  codexa-agent-prompt.txt  openrouter_implementation_guide.md
plan/: tasks.yaml
tests/: __init__.py  test_config.py  test_mcp_filesystem.py  (+1 more)
(+158 files in other folders)
